--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -19,6 +19,12 @@
               <f:facet name="header">Last Name</f:facet>
               #{employee.lastName}
           </h:column>
+
+          <h:column>
+              <f:facet name="header">Actions</f:facet>
+              <h:link value="edit"></h:link>
+          </h:column>
+
       </h:dataTable>
    </f:view>
 </html>
